Revert "I made a main.css file"
This reverts commit 53f1a3bd80b91c3be8e785f1a2f263a5660a6311.

--- a/main.html
+++ b/main.html
@@ -6,40 +6,22 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body>
-        <header class="Header">
-            <div class="Header__Menu">
-                <div class="Header__Menu-Menu">
-                    <p class="Header__Menu-MenuButton">Home</p>
-                    <p class="Header__Menu-MenuButton">Work</p>
-                    <p class="Header__Menu-MenuButton">Eat</p>
-                    <p class="Header__Menu-MenuButton">Relax</p>
-                    <p class="Header__Menu-MenuButton">Traffic</p>
-                </div>
-                <div class="Header__Menu-Share">
-                    <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
-                    <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
-                </div>
-            </div>
-        </header>	
 		<main class="Main">
 			<div class="Main__Image-Container">
-				<img class="Main__Image-Island" src="image/island.jpg" />
+				<img class="Main__Image-Island" src="" />
 			</div>
 			<div class="Main__Title">
-					<span class="Main__Title-Text">Digital Nomads in Yokji Island
-					</span>
-					<span class="Main__Title-Text">Achieve Freedom, Go anywhere.
-					</span>
+				<span class="Main__Title-Text">Digital Nomads in Yokji Island</span>
+				<span class="Main__Title-Text">Achieve Freedom, Go anywhere.</span>
 			</div>
 		</main>
 		<section class="Menu">
 			<div class="Menu__Header">
 				<span class="Menu__Header-Text">알고싶은 섬, 욕지도</span>
 			</div>
-			<div class="Menu__Pictures">
 			<div class="Menu__Picture-Container">
 				<a href="work.html" class="Menu__Link">
-					<img src="image/work.jpg" class="Menu__Picture"/>
+					<img src="" class="Menu__Picture"/>
 						<div class="Menu__Overlay">
 							<div class="Menu__Texts">
 								<span class="Menu__Text">Work</span>
@@ -49,7 +31,7 @@
 			</div>
 			<div class="Menu__Picture-Container">
 				<a href="eat.html" class="Menu__Link">
-					<img src="image/eat.jpg" class="Menu__Picture"/>
+					<img src="" class="Menu__Picture"/>
 						<div class="Menu__Overlay">
 							<div class="Menu__Texts">
 								<span class="Menu__Text">Eat</span>
@@ -59,7 +41,7 @@
 			</div>
 			<div class="Menu__Picture-Container">
 				<a href="relax.html" class="Menu__Link">
-					<img src="image/relax.jpg" class="Menu__Picture"/>
+					<img src="" class="Menu__Picture"/>
 						<div class="Menu__Overlay">
 							<div class="Menu__Texts">
 								<span class="Menu__Text">Relax</span>
@@ -67,23 +49,21 @@
 						</div>
 				</a>
 			</div>
-			</div>
 		</section>
 		<footer class="Us">
 			<div class="Us__About">
 				<div class="Us__About Left-column">
-					<img class="Us__About Image" src="image/aboutus.gif" />
+					<img class="Us__About Image" src="" />
 				</div>
 				<div class="Us__About Right-column">
 					<span class="Us__About About-us">About Us</span>
 					<span class="Us__About description">우리는 천재 프로그래머 니콜라스의 제자들이다. 다양한 연령대와 독특한 성향의 집단으로서 노마드 코더 캠프를 통해 구성된 가장 창의적인 집단이다.</span>
 					<a href="aboutus.html" class="Us__About more">Read more...</a> 
-
 				</div>
 			</div>
 			<div class="Us__Subscribe">
 				<span class="Us__Subscribe Subscribe-us">Subscribe Us</span>
-				<form class=Us__Form>
+				<form>
 					<input 
 						class="Us__Subscribe input" 
 						type="text" 
@@ -92,7 +72,7 @@
 						name="useremail" />
 					<input
 						type="submit"
-						value="Sign Up"
+						value="subscribe us"
 						class="Us__Subscribe input-button" />
 				</form>
 			</div>
