3차 병합 도전 - 메인소스 수정분 반영
3차 병합 도전 - 메인소스 수정분 반영

--- a/head.html
+++ b/head.html
@@ -2,13 +2,15 @@
 <html lang="en">
 	<head>
 		<title>Digital Nomads Island | Yokji </title>
+		    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles/root.css">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body> 
-        <header class="Header">
+        <nav class="Header">
             <div class="Header__Menu">
                 <div class="Header__Menu-Menu">
+                    <p class="Header__Menu-MenuButton Header__Menu-Logo">[Dino Island]</p>
                     <p class="Header__Menu-MenuButton">Home</p>
                     <p class="Header__Menu-MenuButton">Work</p>
                     <p class="Header__Menu-MenuButton">Eat</p>
@@ -16,11 +18,12 @@
                     <p class="Header__Menu-MenuButton">Traffic</p>
                 </div>
                 <div class="Header__Menu-Share">
-                    <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
                     <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+                    <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+                    <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
                 </div>
             </div>
-        </header>
+        </nav>
 
 /* 메인은 빅토리아가 예쁘게 꾸며 줄 것임 */
   		<main class="Login">
