index header 가운데정렬

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                     <p class="Header__Menu-MenuButton">Relax</p>
                     <p class="Header__Menu-MenuButton">Traffic</p>
                 </div>
+                
+                <div class="Header__Menu-Center">
+                </div>
+                
                 <div class="Header__Menu-Share">
                     <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
                     <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
