--- a/work.html
+++ b/work.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Document</title>
-    </head>
-    <body>
+<head>
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles/root.css">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+</head>
+<body>
+  <header class="Header">
+    <div class="Header__Menu">
+      <div class="Header__Menu-Menu">
+        <p class="Header__Menu-MenuButton Header__Menu-Logo">[Dino Island]</p>
+
+        <a href="index.html" class="Header__Menu-Overlay">
+          <p class="Header__Menu-MenuButton">Home</p>
+        </a>
+
+        <a href="work.html" class="Header__Menu-Overlay">
+          <p class="Header__Menu-MenuButton">Work</p>
+        </a>
+
+        <a href="eat.html" class="Header__Menu-Overlay">
+          <p class="Header__Menu-MenuButton">Eat</p>
+        </a>
+
+        <a href="relax.html" class="Header__Menu-Overlay">
+          <p class="Header__Menu-MenuButton">Relax</p>
+        </a>
+
+        <a href="traffic.html" class="Header__Menu-Overlay">
+          <p class="Header__Menu-MenuButton">Traffic</p>
+        </a>
+      </div>
+
+      <div class="Header__Menu-Center">
+      </div>
+
+      <div class="Header__Menu-Share">
+        <a href="https://www.facebook.com/nomadcoders">
+          <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+        </a>
+        <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+        <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+      </div>
+    </div>
+  </header>
+
         <h1>Work</h1>
             <p>욕지도에서 좋은 경치를 즐기며 훌륭한 와이파이 속도를 누릴 수 있는 곳을 소개함</p>
         <h2>Cafe AAA</h2>
             <p>2017.06.22 경남 통영시 욕지면 무슨동        </p>
             <div class="picture detail">
                 <a href="work feed1.html" class="picture detail">
-                    <img src="image/work.jpg" class="picture detail">
+                    <img src="image/feed_work001.jpg" class="picture detail">
             </div>
         <h2>Cafe BBB</h2>
             <p>2017.06.22 경남 통영시 욕지면 무슨동         </p>
