--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <header class="Header">
       <div class="Header__Menu">
         <div class="Header__Menu-Menu">
-          <p class="Header__Menu-MenuButton Header__Menu-Logo">[Dino Island]</p>
-
           <a href="index.html" class="Header__Menu-Overlay">
             <p class="Header__Menu-MenuButton">Home</p>
           </a>
-
           <a href="work.html" class="Header__Menu-Overlay">
             <p class="Header__Menu-MenuButton">Work</p>
           </a>
@@ -33,15 +30,16 @@
           </a>
         </div>
 
-        <div class="Header__Menu-Center">
-        </div>
-
         <div class="Header__Menu-Share">
           <a href="https://www.facebook.com/nomadcoders">
             <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
           </a>
+          <a href="https://www.instagram.com">
           <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.twitter.com">
           <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
     </header>
