--- a/relax.html
+++ b/relax.html
@@ -7,44 +7,42 @@
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-  <header class="Header">
-    <div class="Header__Menu">
-      <div class="Header__Menu-Menu">
-        <p class="Header__Menu-MenuButton Header__Menu-Logo">[Dino Island]</p>
+    <header class="Header">
+      <div class="Header__Menu">
+        <div class="Header__Menu-Menu">
+          <a href="index.html" class="Header__Menu-Overlay">
+            <p class="Header__Menu-MenuButton">Home</p>
+          </a>
+          <a href="work.html" class="Header__Menu-Overlay">
+            <p class="Header__Menu-MenuButton">Work</p>
+          </a>
 
-        <a href="index.html" class="Header__Menu-Overlay">
-          <p class="Header__Menu-MenuButton">Home</p>
-        </a>
+          <a href="eat.html" class="Header__Menu-Overlay">
+            <p class="Header__Menu-MenuButton">Eat</p>
+          </a>
 
-        <a href="work.html" class="Header__Menu-Overlay">
-          <p class="Header__Menu-MenuButton">Work</p>
-        </a>
+          <a href="relax.html" class="Header__Menu-Overlay">
+            <p class="Header__Menu-MenuButton">Relax</p>
+          </a>
 
-        <a href="eat.html" class="Header__Menu-Overlay">
-          <p class="Header__Menu-MenuButton">Eat</p>
-        </a>
+          <a href="traffic.html" class="Header__Menu-Overlay">
+            <p class="Header__Menu-MenuButton">Traffic</p>
+          </a>
+        </div>
 
-        <a href="relax.html" class="Header__Menu-Overlay">
-          <p class="Header__Menu-MenuButton">Relax</p>
-        </a>
-
-        <a href="traffic.html" class="Header__Menu-Overlay">
-          <p class="Header__Menu-MenuButton">Traffic</p>
-        </a>
+        <div class="Header__Menu-Share">
+          <a href="https://www.facebook.com/nomadcoders">
+            <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.instagram.com">
+          <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.twitter.com">
+          <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+          </a>
+        </div>
       </div>
-
-      <div class="Header__Menu-Center">
-      </div>
-
-      <div class="Header__Menu-Share">
-        <a href="https://www.facebook.com/nomadcoders">
-          <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
-        </a>
-        <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
-        <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
-      </div>
-    </div>
-  </header>
+    </header>
     <body>
         <h1>Relax</h1>
             <p>숙소 및 게스트하우스 소개</p>
