--- a/traffic.html
+++ b/traffic.html
@@ -1,11 +1,70 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
+	<head>
+	  <meta charset="UTF-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	  <title>Document</title>
+	</head>
+	<body>
+		<header class="Header">
+	      <div class="Header__Menu">
+	        <div class="Header__Menu-Menu">
+	          <p class="Header__Menu-MenuButton Header__Menu-Logo">
+	          [Dino Island]
+	          </p>
 
-</body>
+	          <a href="index.html" class="Header__Menu-Overlay">
+	            <p class="Header__Menu-MenuButton">Home</p>
+	          </a>
+
+	          <a href="work.html" class="Header__Menu-Overlay">
+	            <p class="Header__Menu-MenuButton">Work</p>
+	          </a>
+
+	          <a href="eat.html" class="Header__Menu-Overlay">
+	            <p class="Header__Menu-MenuButton">Eat</p>
+	          </a>
+
+	          <a href="relax.html" class="Header__Menu-Overlay">
+	            <p class="Header__Menu-MenuButton">Relax</p>
+	          </a>
+
+	          <a href="traffic.html" class="Header__Menu-Overlay">
+	            <p class="Header__Menu-MenuButton">Traffic</p>
+	          </a>
+	          <a href="aboutus.html" class="Header__Menu-Overlay">
+	            <p class="Header__Menu-MenuButton">About Us</p>
+	          </a>
+	        </div>
+	        <div class="Header__Menu-Center">
+	        </div>
+	        <div class="Header__Menu-Share">
+	          <a href="https://www.facebook.com/nomadcoders">
+	            <i class="fa fa-facebook fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+	          </a>
+	          <i class="fa fa-instagram fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+	          <i class="fa fa-twitter fa-2x Header__Menu-Icon" aria-hidden="true"></i>
+	        </div>
+	      </div>
+	    </header>
+	    <main class="Traffic">
+	    	<div class="Traffic__Image-Container">
+	    	<!--사진 첨부 필요-->
+	    	</div>
+	    	<div class="Traffic__Title">
+	    		<span class="Traffic__Title-Text">욕지도
+	    		</span>
+	    		<span class="Traffic__Title-Content">경상남도 통영시 욕지면
+	    		</span>
+				<span class="Traffic__Title-Content">Phone. 055-650-3580
+				</span>
+	    	</div>
+	    	<section class="Transportation">
+	    		<div class="Transportation__Ferry">
+	    		</div>
+	    		<div class="Transportation__Bus">
+	    		</div>
+	    	</section>	
+	    </main>
+	</body>	
 </html>
