좋아요와 댓글란 추가

--- a/relax.html
+++ b/relax.html
@@ -55,6 +55,30 @@
                 <a href="Relax feed1.html" class="picture detail">
                     <img src=" " class="picture detail">
             </div>
+            <div class="photo icons">
+                <span class="photo_icon">
+                    <i class="fa fa-heart-o heart fa-lg"></i>
+                </span>
+                <span class="photo_icon">
+                    <i class="fa fa-comment-o fa-lg"></i>
+                </span>
+            </div>
+            <span class="photo__likes">40 likes</span>
+            <ul class="photo__comments">
+                    <li class="photo__comment">
+                        <span class="photo__comment-author">wow</span> !!!!
+                    </li>
+                    <li class="photo__comment">
+                        <span class="photo__comment-author">wow</span> !!~!
+                    </li>
+            </ul>
+            <span class="photo__time-ago">11 hours ago</span>
+            <div class="picture textbox">
+                <textarea placeholder="Add a commnet..." class="add comment">
+                </textarea>
+                <i class="fa fa-ellipsis-h">
+                </i>
+            </div>
         </section>
         <h2>aaa 게스트하우스</h2>
             <p>2017.06.22 경남 통영시 욕지면 무슨동         </p>
@@ -62,6 +86,30 @@
             <div class="picture detail">
                 <a href="Relax feed2.html" class="picture detail">
                     <img src=" " class="picture detail">
+            </div>
+            <div class="photo icons">
+                <span class="photo_icon">
+                    <i class="fa fa-heart-o heart fa-lg"></i>
+                </span>
+                <span class="photo_icon">
+                    <i class="fa fa-comment-o fa-lg"></i>
+                </span>
+            </div>
+            <span class="photo__likes">40 likes</span>
+            <ul class="photo__comments">
+                    <li class="photo__comment">
+                        <span class="photo__comment-author">wow</span> !@@
+                    </li>
+                    <li class="photo__comment">
+                        <span class="photo__comment-author">wow</span> !!~!
+                    </li>
+            </ul>
+            <span class="photo__time-ago">11 hours ago</span>
+            <div class="picture textbox">
+                <textarea placeholder="Add a commnet..." class="add comment">
+                </textarea>
+                <i class="fa fa-ellipsis-h">
+                </i>
             </div>
         </section>
     </body>
