--- a/work.html
+++ b/work.html
@@ -54,6 +54,30 @@
                 <a href="work feed1.html" class="picture detail">
                     <img src="image/feed_work001.jpg" class="picture detail">
             </div>
+            <div class="photo icons">
+                <span class="photo_icon">
+                    <i class="fa fa-heart-o heart fa-lg"></i>
+                </span>
+                <span class="photo_icon">
+                    <i class="fa fa-comment-o fa-lg"></i>
+                </span>
+            </div>
+            <span class="photo__likes">40 likes</span>
+            <ul class="photo__comments">
+                    <li class="photo__comment">
+                        <span class="photo__comment-author">wow</span> Cafe AAA 입니다
+                    </li>
+                    <li class="photo__comment">
+                        <span class="photo__comment-author">wow</span> !!!
+                    </li>
+            </ul>
+            <span class="photo__time-ago">11 hours ago</span>
+            <div class="picture textbox">
+                <textarea placeholder="Add a commnet..." class="add comment">
+                </textarea>
+                <i class="fa fa-ellipsis-h">
+                </i>
+            </div>
         <h2>Cafe BBB</h2>
             <p>2017.06.22 경남 통영시 욕지면 무슨동         </p>
         <section class="picture">
