--- a/traffic.html
+++ b/traffic.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 	  <meta charset="UTF-8">
+	  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	  <link rel="stylesheet" href="styles/root.css">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  <title>Document</title>
